performance related fixes stage one